

[build-system]
requires = ["setuptools>= 46.4", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HDBPA"
version = "0.0.1"
authors = [
    {name = "Shiyi Wang", email = "syiwang@uw.edu"},
]
description = "Hamming-distance based phylogenetic analysis tailored for long reads."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "pandas",
    "numpy",
    "pysam",
    "matplotlib"
]
